metadata1/unpackaged/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Send_scope_contract_with_invoice__c</fullName>
        <description>PD needs to indicate whether to send out scope with the invoice. Missing value will indicates to review the information.</description>
        <label>Send scope/contract with invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Split_Percent__c</fullName>
        <formula>IF( AND( (AE_1_Bonus__c != &apos;&apos;),(AE_2_Bonus__c != &apos;&apos;)), 
	50, 
	IF( 
		OR(
			AND((AE_1_Bonus__c == &apos;&apos; ), (AE_2_Bonus__c != &apos;&apos;)), 
			AND((AE_1_Bonus__c != &apos;&apos;), (AE_2_Bonus__c == &apos;&apos;))), 
	100, 
	0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Split Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Process</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
                <value>
                    <fullName>Ready for Billing</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_for_Approval_By__c</fullName>
        <description>Field to capture the user that submitted a job for approval, populated by Invoice Approval Process field update</description>
        <label>Submitted for Approval By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Superintedent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Superintendent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax1Rate__c</fullName>
        <label>Tax 1 Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax2Rate__c</fullName>
        <label>Tax 2 Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax3Rate__c</fullName>
        <label>Tax 3 Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TaxGroup1__c</fullName>
        <label>Tax Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxGroup2__c</fullName>
        <label>Tax Group 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxGroup3__c</fullName>
        <label>Tax Group 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Group_Rate__c</fullName>
        <formula>Bill_to_Tax_Group__r.Tax_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Group Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tax_Group__c</fullName>
        <label>Tax Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Taxable_amount__c</fullName>
        <label>Total Taxable Costs</label>
        <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.Taxable__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.IsCredit__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Test_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test lookup</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices (Test lookup)</relationshipLabel>
        <relationshipName>Invoices2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timberline_Customer_Number__c</fullName>
        <formula>Bill_To__r.Timberline_Customer_Number__c</formula>
        <inlineHelpText>Bill to Account Customer Number</inlineHelpText>
        <label>Timberline Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Costs_Per_Contract__c</fullName>
        <label>Total Costs Per Contract</label>
        <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.IsCredit__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Credits__c</fullName>
        <label>Total Credits</label>
        <summarizedField>Invoice_Line_Item__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Invoice_Line_Item__c.IsCredit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tax__c</fullName>
        <formula>Taxable_amount__c   *  Tax_Group_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version #</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_authorization_sent_to_adjuster__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Work authorization sent to adjuster</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_digit_record_ID__c</fullName>
        <formula>CASESAFEID( Id )</formula>
        <label>18-digit record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>retainage_amount__c</fullName>
        <formula>Retainage_Held_percent__c *  Total_Costs_Per_Contract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>retainage amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All_Finalized_Invoices_ready_for_Sync</fullName>
        <columns>NAME</columns>
        <columns>ATI_Job__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Finalized_By_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>All Finalized Invoices ready for Sync</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>All Open Invoices (All Statuses)</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Pending_Invoices</fullName>
        <columns>NAME</columns>
        <columns>ATI_Job__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Costs_Per_Contract__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>In Process</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>All Pending Invoices (Not In Process)</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Pro_Forma_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Last_Successful_Timberline_Sync__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Pro Forma Invoices</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finalized_Invoices_ready_for_Sync</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Total_Costs_Per_Contract__c</columns>
        <columns>Last_Successful_Timberline_Sync__c</columns>
        <columns>Bill_To__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>MTD_Work_Billed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Final__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>Finalized Invoices ready for Sync</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Invoices_awaiting_approval</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Bill_To__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submitted_for_Approval_By__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Approved_By__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>01270000000UPGE</value>
        </filters>
        <label>Invoices awaiting approval</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Finalized_Invoices_ready_for_Sync</fullName>
        <columns>NAME</columns>
        <columns>ATI_Job__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Finalized_By_is_current_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>My Finalized Invoices ready for Sync</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_In_Process_Invoices</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Total_Costs_Per_Contract__c</columns>
        <columns>Net_Due__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_creator_is_current_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Invoice_PD_on_job_is_current_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Process</value>
        </filters>
        <label>My In Process Invoices</label>
    </listViews>
    <listViews>
        <fullName>My_Invoices_Last_90_Days</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Total_Costs_Per_Contract__c</columns>
        <columns>Net_Due__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Invoice_creator_is_current_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Invoice_PD_on_job_is_current_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Due_Date__c</field>
            <operation>equals</operation>
            <value>LAST_90_DAYS</value>
        </filters>
        <label>My Invoices - Last 90 Days (PDs/Admins)</label>
    </listViews>
    <listViews>
        <fullName>My_Synced_Invoices_last_7_days</fullName>
        <columns>Last_Successful_Timberline_Sync__c</columns>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Delivery_Method__c</columns>
        <columns>Internal__c</columns>
        <columns>Send_invoice_to_customer_insurance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Finalized_By_is_current_user__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <label>My Synced Invoices - last 7 days</label>
    </listViews>
    <listViews>
        <fullName>Ready_and_Pending_Invoices_Cyndi</fullName>
        <columns>NAME</columns>
        <columns>ATI_Job__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>San Francisco,Sacramento,San Jose,Dallas,Houston,Chicago,Florida</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>In Process,Final</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>Ready and Pending Invoices - Cyndi</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ready_and_Pending_Invoices_Doreen</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>ATI_Job__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>Corporate,Orange,Los Angeles,Las Vegas,Phoenix,Tucson,Flagstaff</value>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>New England,Philadelphia</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>In Process,Final</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>Ready and Pending Invoices - Doreen</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ready_and_Pending_Invoices_Miguel</fullName>
        <columns>NAME</columns>
        <columns>ATI_Job__c</columns>
        <columns>Office__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Net_Due__c</columns>
        <columns>Bill_To__c</columns>
        <columns>Timberline_Customer_Number__c</columns>
        <columns>Bill_to_Tax_Group__c</columns>
        <columns>Send_To_Timberline__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Last_Successful_Timberline_Sync__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Is_Dummy_Invoice__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>San Diego,Denver,Seattle,Riverside</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>In Process,Final</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.Final_Invoice</value>
        </filters>
        <label>Ready and Pending Invoices - Miguel</label>
        <sharedTo>
            <group>Billing</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>Final_Invoice</fullName>
        <active>true</active>
        <label>Approved Invoice</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Bill_To_Attention_Lookup_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Bill_To_Attention_Lookup__r.Email),
 ISPICKVAL(Delivery_Method__c,&quot;Email&quot;))</errorConditionFormula>
        <errorMessage>Please populate the email address on the Bill To Attention Lookup contact record in order to choose Delivery Method of &apos;Email.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Final_Invoice</fullName>
        <active>false</active>
        <description>Prevents users from editing invoices marked as &quot;Final.&quot;  This validation rule can be bypassed by users with appropriately configured &quot;Invoice Settings&quot; custom settings.</description>
        <errorConditionFormula>AND(
    NOT($Setup.InvoiceSettings__c.Can_Modify_Final_Invoices__c),
    NOT(ISNEW()),
    PRIORVALUE(Is_Final__c) == True )</errorConditionFormula>
        <errorMessage>This invoice has been marked as &apos;Final&apos; and cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Final_Invoice1</fullName>
        <active>false</active>
        <description>Prevents users from editing invoices marked as &quot;Final.&quot;  This validation rule can be bypassed by users with appropriately configured &quot;Invoice Settings&quot; custom settings.</description>
        <errorConditionFormula>AND( Is_Final__c = True, PRIORVALUE(Is_Final__c)  =  True )</errorConditionFormula>
        <errorMessage>This invoice has been marked as FINAL and cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Modify_Synchronized_Invoice</fullName>
        <active>false</active>
        <description>Prevents users from editing invoices which have been sent to Timberline successfully.  This validation rule can be bypassed by users with appropriately configured &quot;Invoice Settings&quot; custom settings.</description>
        <errorConditionFormula>AND(
    NOT($Setup.InvoiceSettings__c.Can_Modify_Final_Invoices__c),
    NOT(ISNEW()),
	OR(
		AND(
			PRIORVALUE(Send_To_Timberline__c) == True,
			NOT(ISCHANGED(Send_To_Timberline__c)),
			NOT(ISCHANGED(Last_Successful_Timberline_Sync__c)) ),
		NOT(ISBLANK(PRIORVALUE(Last_Successful_Timberline_Sync__c))) ))</errorConditionFormula>
        <errorMessage>This invoice is synchronized with Timberline and cannot be further edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Syncrhonize_Dummy_Invoices</fullName>
        <active>true</active>
        <description>Prevents a record from synchronizing with Timberline if it is flagged as a Dummy Invoice</description>
        <errorConditionFormula>Is_Dummy_Invoice__c &amp;&amp; Send_To_Timberline__c</errorConditionFormula>
        <errorMessage>Dummy Invoices cannot be sent to Timberline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_Date_cant_be_prior_to_today</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	Due_Date__c &lt; TODAY(), 

        NOT( ISCHANGED( AE_1_Bonus__c ) ), 
        NOT( ISCHANGED( AE_2_Bonus__c ) ), 

	NOT($Profile.Name = &quot;System Administrator&quot;), 
        NOT($Profile.Name = &quot;Accounting&quot;),
        NOT($Profile.Name = &quot;Collections&quot;)
)</errorConditionFormula>
        <errorMessage>Invoices can only be created/edited if the Invoice Date is today or in the future. Please contact accounting with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoices_only_editable_while_In_Process</fullName>
        <active>true</active>
        <description>Prevents users (except sys-admin/accounting profiles) from editing invoices that are marked Ready for Billing, Final, or Pending. Also prevents Collections from revising invoices unless they have been synced to Timberline.</description>
        <errorConditionFormula>AND( 

NOT(ISCHANGED(AE_1_Bonus__c)),
NOT(ISCHANGED(AE_2_Bonus__c)),

OR(
NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;In Process&apos;)), NOT(ISPICKVAL(Status__c, &apos;In Process&apos;)) 
),

NOT(AND(ISPICKVAL(PRIORVALUE(Status__c), &apos;In Process&apos;),ISPICKVAL(Status__c, &apos;Ready for Billing&apos;))),

NOT($Profile.Name = &quot;System Administrator&quot;), 
NOT($Profile.Name = &quot;Accounting&quot;)

)</errorConditionFormula>
        <errorMessage>Invoices can only be edited while they are &apos;In Process&apos;. Please contact accounting with any questions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_Accounting_can_make_status_Final</fullName>
        <active>true</active>
        <description>Only accounting and system admins can mark invoices as final or pending</description>
        <errorConditionFormula>(isnew() || ISCHANGED(Status__c)) &amp;&amp; (ISPICKVAL(Status__c, &quot;Final&quot;) || ISPICKVAL(Status__c,&quot;Pending&quot;)) &amp;&amp; ($Profile.Name &lt;&gt; &quot;Accounting&quot; &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Only accounting can change invoice status to Final.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Retainage_Held_percent_Is_Required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
Send_To_Timberline__c = True, 
OR(
Retainage_Held_percent__c = null,
Job__c = null,
00N70000002o9ru.00N70000002oGRV  = null
)
)</errorConditionFormula>
        <errorMessage>The Retainage Held Percent cannot be empty.</errorMessage>
    </validationRules>
</CustomObject>